--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <html lang="en-US">
 
 <head>
@@ -9,9 +8,18 @@
     <meta name="description" content="Seven hill" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./bootstrap.min.css" media="screen" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./bootstrap.min.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./style.css" media="screen" />
 </head>
 
 <body>
@@ -29,7 +37,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="multiLanguage col-md-3 col-md-push-9">
+                    <div class="multiLanguage col-md-3">
                         <div class="onoffswitch4">
                             <input type="checkbox" name="onoffswitch4" class="onoffswitch4-checkbox" id="myonoffswitch4" checked>
                             <label class="onoffswitch4-label" for="myonoffswitch4">
@@ -41,8 +49,150 @@
                 </div>
             </div>
         </div>
+        <div class="navigationBar">
+            <div class="container">
+                <div class="row">
+                 <div class="naviWithLogo">
+                        <div class="logo col-md-3">
+                            <img src="./image/artboard-2-copy.png">
+                        </div>
+                        <<!--<div class="naviBar col-md-7">
+                            <ul>
+                                <li><a href="default.asp">Home</a></li>
+                                <li><a href="news.asp">Services</a></li>
+                                <li><a href="contact.asp">Our expertise</a></li>
+                                <li><a href="about.asp">About us</a></li>
+                                <li><a href="about.asp">Contact</a></li>
+                                <li><a href="about.asp">Meet the founder</a></li>
+                            </ul>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="slideShow">
+            <main class="main-content">
+                <section class="slideshow">
+                    <div class="slideshow-inner">
+                        <div class="slides">
+                            <div class="slide is-active">
+                                <div class="slide-content">
+                                    <div class="caption">
+                                        <div class="title">Lorem Ipsum is simply</div>
+                                        <div class="text">
+                                            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                                when an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries, but also the
+                                                leap into electronic typesetting, remaining essentially unchanged.</p>
+                                        </div>
+                                        <a href="#" class="btn">
+                                            <span class="btn-inner">Contact Us</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="image-container">
+                                    <img src="./image/group-18.jpg" alt="" class="image" />
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-content">
+                                    <div class="caption">
+                                        <div class="title">Lorem Ipsum is simply</div>
+                                        <div class="text">
+                                            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                                when an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries, but also the
+                                                leap into electronic typesetting, remaining essentially unchanged.</p>
+                                        </div>
+                                        <a href="#" class="btn">
+                                            <span class="btn-inner">Contact Us</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="image-container">
+                                    <img src="./image/group-18.jpg" alt="" class="image" />
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-content">
+                                    <div class="caption">
+                                        <div class="title">Lorem Ipsum is simply</div>
+                                        <div class="text">
+                                            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                                when an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries, but also the
+                                                leap into electronic typesetting, remaining essentially unchanged.</p>
+                                        </div>
+                                        <a href="#" class="btn">
+                                            <span class="btn-inner">Contact Us</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="image-container">
+                                    <img src="./image/group-18.jpg" alt="" class="image" />
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-content">
+                                    <div class="caption">
+                                        <div class="title">Lorem Ipsum is simply</div>
+                                        <div class="text">
+                                            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                                when an unknown printer took a galley of type and scrambled it to make a
+                                                type specimen book. It has survived not only five centuries, but also the
+                                                leap into electronic typesetting, remaining essentially unchanged.</p>
+                                        </div>
+                                        <a href="#" class="btn">
+                                            <span class="btn-inner">Contact Us</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="image-container">
+                                    <img src="./image/group-18.jpg" alt="" class="image" />
+                                </div>
+                            </div>
+                            <div class="pagination">
+                                <div class="item is-active">
+                                    <span class="icon">1</span>
+                                </div>
+                                <div class="item">
+                                    <span class="icon">2</span>
+                                </div>
+                                <div class="item">
+                                    <span class="icon">3</span>
+                                </div>
+                                <div class="item">
+                                    <span class="icon">4</span>
+                                </div>
+                            </div>
+                            <div class="arrows">
+                                <div class="arrow prev">
+                                    <span class="svg svg-arrow-left">
+                                        <svg version="1.1" id="svg4-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                                            y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26"
+                                            xml:space="preserve">
+                                            <path d="M13,26c-0.256,0-0.512-0.098-0.707-0.293l-12-12c-0.391-0.391-0.391-1.023,0-1.414l12-12c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414L2.414,13l11.293,11.293c0.391,0.391,0.391,1.023,0,1.414C13.512,25.902,13.256,26,13,26z"
+                                            /> </svg>
+                                        <span class="alt sr-only"></span>
+                                    </span>
+                                </div>
+                                <div class="arrow next">
+                                    <span class="svg svg-arrow-right">
+                                        <svg version="1.1" id="svg5-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                                            y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26"
+                                            xml:space="preserve">
+                                            <path d="M1,0c0.256,0,0.512,0.098,0.707,0.293l12,12c0.391,0.391,0.391,1.023,0,1.414l-12,12c-0.391,0.391-1.023,0.391-1.414,0s-0.391-1.023,0-1.414L11.586,13L0.293,1.707c-0.391-0.391-0.391-1.023,0-1.414C0.488,0.098,0.744,0,1,0z"
+                                            /> </svg>
+                                        <span class="alt sr-only"></span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                </section>
+            </main>
+            </div>
     </header>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
+    <script src="./index.js"></script>
 </body>
-=======
-dâsdasdasdsa
->>>>>>> 14f8e05cb986af016d13a5fdb9756c86b650b513
