--- a/indexwbt.html
+++ b/indexwbt.html
@@ -21,19 +21,19 @@
 <header>
     <div class="topBar">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Active</a>
+                        <a class="nav-link" href="#"><img src="./image/fill-1.svg" alt="">
+                            <p>sevenhillsltd@gmail.com</p></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#"><img src="./image/fill-1.svg" alt="">
+                            <p>sevenhillsltd@gmail.com</p></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                        <a class="nav-link" href="#"><img src="./image/fill-1.svg" alt="">
+                            <p class="last">sevenhillsltd@gmail.com</p></a>
                     </li>
                 </ul>
             </div>
@@ -121,62 +121,191 @@
 </header>
 <div class="panelServies">
     <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                One of three columns
+        <div class="row align-items-center">
+            <div class="title">
+                <h1>Our Services</h1>
             </div>
-            <div class="col-sm">
-                One of three columns
+            <div class="col">
+                <img src="./image/artboard-1-copy.png" alt="" class="img-fluid"/>
+                <h3>Import</h3>
             </div>
-            <div class="col-sm">
-                One of three columns
+            <div class="col">
+                <img src="./image/artboard-1-copy.png" alt="" class="img-fluid"/>
+                <h3>Import</h3>
+            </div>
+            <div class="col">
+                <img src="./image/artboard-1-copy.png" alt="" class="img-fluid"/>
+                <h3>Import</h3>
             </div>
         </div>
     </div>
 </div>
 <div class="panelExpertise">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col">
-                One of three columns
+    <div class="header">
+        <h1>Our Expertise</h1>
+    </div>
+    <div class="container d-flex">
+        <section class="expertiseContent row no-gutter align-items-center">
+            <div class="col col-md-4 text-center d-flex align-items-center">
+                <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
             </div>
-            <div class="col">
-                One of three columns
+            <div class="col col-md-4 text-center d-flex align-items-center">
+                <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
             </div>
-            <div class="col">
-                One of three columns
+            <div class="col col-md-4 text-center d-flex align-items-center">
+                <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
             </div>
-        </div>
+            <div class="col col-md-4 text-center d-flex align-items-center">
+                <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
+            </div>
+            <div class="col col-md-4 text-center d-flex align-items-center">
+                <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
+            </div>
+            <div class="col col-md-4 text-center d-flex align-items-center">
+                <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <h3 class="w-100 position-absolute text-white my-auto">Raw Cashew Nuts</h3>
+            </div>
+        </section>
     </div>
 </div>
-<div class="contactForm">
+<div class="contactPanel">
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6">.col-12</div>
-            <div class="col-12 col-md-6">.col-12</div>
+        <div class="row contactForm">
+            <div class="col-12 col-md-6 imageContact"><img src="./image/contactForm.png"></div>
+            <div class="col-12 col-md-6 workWithUs">
+                <form class="jumbotron">
+                    <div class="header">
+                        <h1>Work With Us</h1>
+                    </div>
+                    <div class="form-group col-xs-12 col-md-10 col-sm-12">
+                        <input type="text" class="form-control" name="" value="" placeholder="Name">
+                    </div>
+                    <div class="form-group col-xs-12 col-md-10 col-sm-12">
+                        <input type="email" class="form-control" name="" value="" placeholder="E-mail">
+                    </div>
+                    <div class="form-group col-xs-12 col-md-10 col-sm-12">
+                        <input type="tel" class="form-control" name="" value="" placeholder="Phone">
+                    </div>
+                    <div class="form-group col-xs-12 col-md-10 col-sm-12">
+                        <textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
+                    </div>
+                    <input class="btn" type="submit" value="Send mail">
+                </form>
+            </div>
         </div>
     </div>
 </div>
 <div class="panelContent">
-    <img src="./image/panelContent.png" class="img-fluid" alt="Responsive image">
+    <section class="row no-gutter align-items-center contentNormal">
+        <div class="col-lg-12 text-center p-0 d-flex align-items-center">
+            <img class="img-fluid position-relative mx-auto" src="./image/panelContent.png" alt="">
+            <div class="position-absolute my-auto content">
+                <h1 class="text-white">About Seven Hills Trading LTD Company</h1>
+                <p class="text-white">It is a long established fact that a reader will be distracted by the readable
+                    content of a
+                    page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                    more-or-less normal distribution of letters. as opposed to using.</p>
+                <input class="btn" type="submit" value="See More" id="btnTest">
+            </div>
+        </div>
+    </section>
+</div>
+<div class="my-auto contentMobile">
+    <div class="container">
+        <section class="row">
+            <div class="col-sx-12">
+                <h1>Mobile</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content
+                    of a
+                    page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                    more-or-less normal distribution of letters. as opposed to using.</p>
+                <a href="404.html">
+                    <input class="btn" type="submit" value="See More">
+                </a>
+            </div>
+        </section>
+    </div>
 </div>
 <div class="panelFounder">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6">.col-12</div>
-            <div class="col-12 col-md-6">.col-12</div>
+            <div class="col-12 col-md-6 aboutFounder">
+                <h1>Meet the Founder</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a
+                    page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                    normal
+                    distribution of letters. as opposed to using.
+                    <br>
+                    <br>
+                    Many desktop publishing packages and web page editors now use Lorem Ipsum as their default
+                    model text, and a search for 'lorem ipsum' will uncover many web sites still in their
+                    infancy.
+                    Various versions have evolved over the years, sometimes by accident, sometimes on purpose
+                    (injected humour and the like).</p>
+
+                <input class="btn" type="submit" value="See More"></div>
+            <div class="col-12 col-md-6"><img id="right" src="./image/img_founder.png" alt="" class="img-fluid"></div>
         </div>
     </div>
 </div>
 <footer>
-
+    <div class="container">
+        <div class="row">
+            <div class="row">
+                <div class="col-6 col-md-4">
+                    <div id="map" class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10949.142965462774!2d106.6890327442656!3d10.772557902286012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f3e8eddf565%3A0x2ab6e5fe92c2e5d7!2sNew+World+Saigon+Hotel!5e0!3m2!1sen!2s!4v1543255808288"
+                                width="280" height="155" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-12 col-md-8">
+                    <div class="detailContent">
+                        <div class="logoaicon">
+                            <img class="logo" src="./image/artboard-2-copy.png">
+                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="#" class="fa fa-twitter"></a>
+                            <a href="#" class="fa fa-instagram"></a>
+                        </div>
+                        <div class="naviFooter">
+                            <ul>
+                                <li>Home</li>
+                                <li>Services</li>
+                                <li>Our expertise</li>
+                                <li>About us</li>
+                                <li>Contact</li>
+                                <li>Meet the founder</li>
+                            </ul>
+                        </div>
+                        <div class="smallInformation">
+                            <ul>
+                                <li><img src="./image/callIcon.svg" alt="">
+                                    <p class="companyInformation">sevenhillsltd@gmail.com</p>
+                                </li>
+                                <li><img src="./image/callIcon.svg" alt="">
+                                    <p class="companyInformation">+84 875 789 287</p>
+                                </li>
+                                <li><img src="./image/callIcon.svg" alt="">
+                                    <p class="last companyInformation">9 AM - 6 PM</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
 <script src="./index.js"></script>
 <script>
-    //navBar[this.scrollTop > 147 ? 'addClass' :'removeClass']("fixed-top");
     var navbar = document.getElementById("navbar");
     var sticky = navbar.offsetTop;
     window.onscroll = function () {
@@ -189,7 +318,6 @@
         } else {
             navbar.classList.remove("fixed-top");
         }
-    }
-
+    };
 </script>
 </body>
