--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </div>
 </div>
 <footer class="footer">
-    <div class="contaier">
+    <div class="container">
         <div class="row">
             <div class="footerContent">
                 <div id="map" class="map">
