--- a/indexwbt.html
+++ b/indexwbt.html
@@ -127,11 +127,11 @@
         </div>
     </div>
     <div class="slideShow">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -156,11 +156,11 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
@@ -221,13 +221,41 @@
         </section>
         <div class="slideProduct">
             <div class="slider owl-carousel owl-theme">
-                <div class="product" id="slider-1">
-                    <h3 class="position-absolute text-white d-block">Raw Cashew Nuts</h3>
-                    <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
+                <div class="product">
+                    <div class="position-absolute w-100 text-center" style="top: 50%;transform: translateY(-50%); ">
+                        <h3 class="text-white ">Raw Cashew Nuts</h3>
+                    </div>
+                    <img src="./image/group-19-copy.png" alt="">
                 </div>
-                <div class="product" id="slider-2">
-                    <img class="img-fluid position-relative mx-auto" src="./image/group-19-copy.png" alt="">
-                    <h3 class="position-absolute text-white my-auto">Raw Cashew Nuts</h3>
+                <div class="product">
+                    <div class="position-absolute w-100 text-center" style="top: 50%;transform: translateY(-50%); ">
+                        <h3 class="text-white ">Raw Cashew Nuts</h3>
+                    </div>
+                    <img src="./image/group-19-copy.png" alt="">
+                </div>
+                <div class="product">
+                    <div class="position-absolute w-100 text-center" style="top: 50%;transform: translateY(-50%); ">
+                        <h3 class="text-white ">Raw Cashew Nuts</h3>
+                    </div>
+                    <img src="./image/group-19-copy.png" alt="">
+                </div>
+                <div class="product">
+                    <div class="position-absolute w-100 text-center" style="top: 50%;transform: translateY(-50%); ">
+                        <h3 class="text-white ">Raw Cashew Nuts</h3>
+                    </div>
+                    <img src="./image/group-19-copy.png" alt="">
+                </div>
+                <div class="product">
+                    <div class="position-absolute w-100 text-center" style="top: 50%;transform: translateY(-50%); ">
+                        <h3 class="text-white ">Raw Cashew Nuts</h3>
+                    </div>
+                    <img src="./image/group-19-copy.png" alt="">
+                </div>
+                <div class="product">
+                    <div class="position-absolute w-100 text-center" style="top: 50%;transform: translateY(-50%); ">
+                        <h3 class="text-white ">Raw Cashew Nuts</h3>
+                    </div>
+                    <img src="./image/group-19-copy.png" alt="">
                 </div>
             </div>
         </div>
@@ -410,12 +438,12 @@
     $(document).ready(function () {
         $('.owl-carousel').owlCarousel({
             navigation: true,
-            center:true,
-            lazyLoad:true,
-            dotsSpeed:1000,
+            center: true,
+            lazyLoad: true,
+            dotsSpeed: 1000,
             items: 1,
             lazyLoadEager: 1000,
-            smartSpeed:1000,
+            smartSpeed: 1000,
             loop: true,
             margin: 30,
             autoplay: true,
@@ -424,6 +452,15 @@
             scrollPerPage: true,
             autoPlay: 2500
         })
+    });
+
+    $(document).ready(function() {
+        $("#carousel").swiperight(function() {
+            $(this).carousel('prev');
+        });
+        $("#carousel").swipeleft(function() {
+            $(this).carousel('next');
+        });
     });
 </script>
 </body>
